objects/LLC_BI__Funding_Method__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Account_Type__c</fullName>
        <description>Populate this picklist field to indicate the deposit account type. This field is manually populated during the deposit account opening workflow.</description>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>MMA Savings</fullName>
                </value>
                <value>
                    <fullName>MMA Checking</fullName>
                </value>
                <value>
                    <fullName>Business Savings</fullName>
                </value>
                <value>
                    <fullName>Business Checking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Funding_Completion_ID__c</fullName>
        <description>This text field autopopulates with an ID that is used to verify vendor details for funding transaction.</description>
        <label>Funding Completion ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Funding_Failure_Detail__c</fullName>
        <description>This optional long text field autopopulates with an error message from the vendor if the account funding request fails.</description>
        <label>Funding Failure Detail</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Funding_Method_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically set when the user selects a funding method during the New Deposit Workflow. It indicates which Funding Method Type is related to the Funding Method of a deposit account.</description>
        <label>Funding Method Type</label>
        <referenceTo>LLC_BI__Funding_Method_Type__c</referenceTo>
        <relationshipLabel>Funding Methods</relationshipLabel>
        <relationshipName>Funding_Methods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Funding_Session_ID__c</fullName>
        <description>This text field autopopulates with the Session ID during which a funding transaction occurs.</description>
        <label>Funding Session ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Funding_Status__c</fullName>
        <description>This picklist field autopopulates with the current funding status, used to track the progress of deposit account funding.</description>
        <label>Funding Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Awaiting Trial Deposits</fullName>
                </value>
                <value>
                    <fullName>Trial Deposit Failure</fullName>
                </value>
                <value>
                    <fullName>Trial Deposit Success</fullName>
                </value>
                <value>
                    <fullName>Trial Deposit Reject</fullName>
                </value>
                <value>
                    <fullName>Funding Success</fullName>
                </value>
                <value>
                    <fullName>Funding Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Funding_Target_ID__c</fullName>
        <description>This text field autopopulates with the ID of the institution using the funding integration.</description>
        <label>Funding Target ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Funding_User_ID__c</fullName>
        <description>This text field autopopulates with the User ID of the user of the funding integration.</description>
        <label>Funding User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Funding Method</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Funding Method Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>